--- a/src/app/components/home/dettaglio/dettaglio.component.html
+++ b/src/app/components/home/dettaglio/dettaglio.component.html
@@ -101,6 +101,7 @@
         <div class="col-md-12">
           <div class="card mb-4 mb-md-0">
             <div class="card-body">
+              <button class="btn btn-primary" (click)="confirmModalWithData(card)">+ Aggiungi Carta alla tua collezione</button>
             </div>
           </div>
         </div>
