--- a/src/app/components/home/utente/gestione-ordini/gestione-ordini.component.html
+++ b/src/app/components/home/utente/gestione-ordini/gestione-ordini.component.html
@@ -4,7 +4,7 @@
       <a class="btn btn-primary" [routerLink]="['/home/utente']">
         < Torna alla sezione Utente</a>
     </div>
-    <div class="col">
+    <div class="col-2">
       <a class="btn btn-primary" (click)="navigate()">
         Aggiungi/Modifica Ordine</a>
     </div>
