--- a/src/app/components/home/utente/gestione-ordini/gestione-ordini.component.html
+++ b/src/app/components/home/utente/gestione-ordini/gestione-ordini.component.html
@@ -16,42 +16,44 @@
       <h6>I tuoi Ordini</h6>
     </div>
     <div class="card-body">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>Prezzo di Vendita</th>
-            <th>Prezzo CardMarket</th>
-            <th>Data Ordine</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody *ngIf="orders.length > 0">
-          <tr *ngFor="let item of orders">
-            <td>
-              {{item.name}}
-            </td>
-            <td>
-              {{item.totalPrice | currency: 'EUR' }}
-            </td>
-            <td>
-              {{item.totalPriceCardMarket  | currency: 'EUR' }}
-            </td>
-            <td>
-              {{getDate(item.orderDate)}}
-            </td>
-            <td>
-              <button class="btn btn-info" (click)="navigate(item)">Dettaglio</button>
-              <button class="btn btn-danger">Rimuovi</button>
-            </td>
-          </tr>
-        </tbody>
-        <tbody *ngIf="!orders || orders.length == 0">
-          <tr>
-            <td>Nessuna carta Posseduta</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Prezzo di Vendita</th>
+              <th>Prezzo CardMarket</th>
+              <th>Data Ordine</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody *ngIf="orders.length > 0">
+            <tr *ngFor="let item of orders">
+              <td>
+                {{item.name}}
+              </td>
+              <td>
+                {{item.totalPrice | currency: 'EUR' }}
+              </td>
+              <td>
+                {{item.totalPriceCardMarket | currency: 'EUR' }}
+              </td>
+              <td>
+                {{getDate(item.orderDate)}}
+              </td>
+              <td>
+                <button class="btn btn-info" (click)="navigate(item)">Dettaglio</button>
+                <button class="btn btn-danger">Rimuovi</button>
+              </td>
+            </tr>
+          </tbody>
+          <tbody *ngIf="!orders || orders.length == 0">
+            <tr>
+              <td>Nessuna carta Posseduta</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
       <pagination *ngIf="orders.length > 0 && totalItems > itemsPerPage" [boundaryLinks]="true"
         [(ngModel)]="currentPage" [totalItems]="totalItems" [itemsPerPage]="itemsPerPage"
