--- a/src/app/components/home/utente/gestione-ordini/ordine-form/ordine-form.component.html
+++ b/src/app/components/home/utente/gestione-ordini/ordine-form/ordine-form.component.html
@@ -11,7 +11,7 @@
             <h6>Trova una carta</h6>
         </div>
         <div class="card-body">
-            <input [(ngModel)]="searchValue" class="form-control" (input)="loadCards()">
+            <!-- <input [(ngModel)]="searchValue" class="form-control" (input)="loadCards()">
             <div *ngIf="cards.length > 0" class="mt-3">
                 <ul class="list-group scrollable-list">
                     <li class="list-group-item" *ngFor="let item of cards">
@@ -28,7 +28,34 @@
                         <button class="btn btn-primary" (click)="addItem(item)">Aggiungi all'ordine</button>
                     </li>
                 </ul>
+            </div> -->
+
+
+            <div class="mb-3" style="position: relative;">
+                <label for="prof" class="form-label">Trova una carta Carta *</label>
+                <input type="text" #professione [(ngModel)]="searchValue" (input)="loadCards()" class="form-control "
+                    autocomplete="off">
+                <div #card class="contenitore-padre" id="i" *ngIf="cards.length > 0 ">
+                    <div class="ui-autocomplete list-group border border-info" id="autocomplete-card">
+                        <div *ngFor="let item of cards">
+                            <a role="button" class="list-group-item list-group-item-action" (click)="addItem(item)">
+                                <ng-template #popTemplate>
+                                    <div [innerHtml]="returnHtml(item.png ? item.png : item.imageFace1 )"></div>
+                                </ng-template>
+                                <span class=" tooltip-350" [tooltip]="popTemplate">
+                                    <p>{{item.printedName ? (item.printedName + ' (' + item.name + ')') : item.name}}
+                                    </p>
+                                    <p *ngFor="let setItem of item.editions" class="text-muted mb-1">
+                                        <img [src]="setItem.setIcon" alt="Edition" style="width: 20px; height: 20px;">
+                                        <span class="ms-2">{{ setItem.setName }}</span>
+                                    </p>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
+
 
         </div>
     </div>
@@ -39,42 +66,43 @@
             <h6>Lista Carte Ordine</h6>
         </div>
         <div class="card-body">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Nome Carta</th>
-                        <th>Nome Set</th>
-                        <th>Prezzo Vendita</th>
-                        <th>Prezzo Minimo Card Market</th>
-                        <th>Quantità</th>
-                        <th>Foil</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody *ngIf="selectedItems.length > 0">
-                    <tr *ngFor="let item of selectedItems ; let i = index">
-                        <td>{{item.card?.printedName ? (item.card?.printedName + ' (' + item.card?.name + ')') :
-                            item.card?.name}} </td>
-                        <td><small *ngFor="let setItem of item.card?.editions">
-                                <div class="d-flex align-items-center">
-                                    <img [src]="setItem.setIcon" alt="Edition" style="width: 40px; height: 40px;">
-                                    <span class="ms-2">{{ setItem.setName }}</span>
-                                </div>
-                            </small></td>
-                        <td>{{ item.price | currency: 'EUR' }} ({{ getPrice(item) | currency: 'EUR' }})</td>
-                        <td>{{ item.priceCM | currency: 'EUR' }} ({{ getPriceCM(item) | currency: 'EUR'}})</td>
-                        <td>{{ item.quantity}}</td>
-                        <td>{{ item.foil ? 'Sì' : 'No'}}</td>
-                        <td><button class="btn btn-danger" (click)="removeItem(i)">Rimuovi</button></td>
-                    </tr>
-                </tbody>
-                <tbody *ngIf="selectedItems && selectedItems.length === 0">
-                    <tr>
-                        <td>Nessuna carta presente</td>
-                    </tr>
-                </tbody>
-            </table>
-
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Nome Carta</th>
+                            <th>Nome Set</th>
+                            <th>Prezzo Vendita</th>
+                            <th>Prezzo Minimo Card Market</th>
+                            <th>Quantità</th>
+                            <th>Foil</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody *ngIf="selectedItems.length > 0">
+                        <tr *ngFor="let item of selectedItems ; let i = index">
+                            <td>{{item.card?.printedName ? (item.card?.printedName + ' (' + item.card?.name + ')') :
+                                item.card?.name}} </td>
+                            <td><small *ngFor="let setItem of item.card?.editions">
+                                    <div class="d-flex align-items-center">
+                                        <img [src]="setItem.setIcon" alt="Edition" style="width: 40px; height: 40px;">
+                                        <span class="ms-2">{{ setItem.setName }}</span>
+                                    </div>
+                                </small></td>
+                            <td>{{ item.price | currency: 'EUR' }} ({{ getPrice(item) | currency: 'EUR' }})</td>
+                            <td>{{ item.priceCM | currency: 'EUR' }} ({{ getPriceCM(item) | currency: 'EUR'}})</td>
+                            <td>{{ item.quantity}}</td>
+                            <td>{{ item.foil ? 'Sì' : 'No'}}</td>
+                            <td><button class="btn btn-danger" (click)="removeItem(i)">Rimuovi</button></td>
+                        </tr>
+                    </tbody>
+                    <tbody *ngIf="selectedItems && selectedItems.length === 0">
+                        <tr>
+                            <td>Nessuna carta presente</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div class="row justify-content-end d-flex mb-3" *ngIf="selectedItems.length > 0">
             <div class="col-2">
