--- a/src/app/components/home/utente/gestione-ordini/ordine-form/ordine-form.component.scss
+++ b/src/app/components/home/utente/gestione-ordini/ordine-form/ordine-form.component.scss
@@ -2,3 +2,11 @@
     max-height: 500px; /* Imposta l'altezza massima desiderata */
     overflow-y: auto; /* Abilita lo scrolling verticale */
   }
+
+  ::ng-deep .tooltip-350 ~ .tooltip .tooltip-inner {
+    max-width: 350px;
+    min-width: 350px;
+    z-index: 9999 !important;
+    position: absolute !important;
+  }
+
