--- a/src/app/components/home/dettaglio/dettaglio.component.html
+++ b/src/app/components/home/dettaglio/dettaglio.component.html
@@ -2,7 +2,7 @@
   <div class="row mb-2">
     <div class="col">
       <a class="btn btn-primary" (click)="navigate()">
-        < Torna alla Ricerca</a>
+        <fa-icon [icon]="faArrowAltCircleLeft" ></fa-icon> Torna alla Ricerca</a>
     </div>
   </div>
 
