--- a/src/app/components/home/utente/carte-possedute/carte-possedute.component.html
+++ b/src/app/components/home/utente/carte-possedute/carte-possedute.component.html
@@ -2,7 +2,7 @@
   <div class="row mb-2">
     <div class="col">
       <a class="btn btn-primary" [routerLink]="['/home/utente']">
-        < Torna alla sezione Utente</a>
+        <fa-icon [icon]="faArrowAltCircleLeft" ></fa-icon> Torna alla sezione Utente</a>
     </div>
   </div>
   <div class="card">
@@ -21,7 +21,7 @@
               <th>Action</th>
             </tr>
           </thead>
-          <tbody *ngIf="userCards.length > 0">
+          <tbody *ngIf="userCards && userCards.length > 0">
             <tr *ngFor="let item of userCards">
               <th scope="row">
                 <label class="control control--checkbox">
@@ -44,18 +44,18 @@
                 </label>
               </td>
               <td>
-                <button class="btn btn-danger" (click)="rimuovi(item)">Rimuovi</button>
+                <button class="btn btn-danger" (click)="rimuovi(item)" tooltip="Elimina"> <fa-icon  [icon]="faTrash" [size]="'1x'"></fa-icon></button>
               </td>
             </tr>
           </tbody>
-          <tbody *ngIf="userCards.length == 0">
+          <tbody *ngIf="userCards && userCards.length == 0">
             <tr>
               <td>Nessuna carta Posseduta</td>
             </tr>
           </tbody>
         </table>
       </div>
-      <pagination *ngIf="userCards.length > 0 && totalItems > itemsPerPage" [boundaryLinks]="true"
+      <pagination *ngIf=" userCards &&  userCards.length > 0 && totalItems > itemsPerPage" [boundaryLinks]="true"
         [(ngModel)]="currentPage" [totalItems]="totalItems" [itemsPerPage]="itemsPerPage"
         (pageChanged)="pageChanged($event)" [maxSize]=10 [firstText]="'Prima'" [lastText]="'Ultima'"
         [previousText]="'<'" [nextText]="'>'"></pagination>
