--- a/src/app/components/home/utente/gestione-ordini/ordine-form/ordine-form.component.html
+++ b/src/app/components/home/utente/gestione-ordini/ordine-form/ordine-form.component.html
@@ -2,7 +2,7 @@
     <div class="row mb-2">
         <div class="col">
             <a class="btn btn-primary" [routerLink]="['/home/utente/ordini']">
-                < Torna a Gestione Ordini</a>
+                <fa-icon [icon]="faArrowAltCircleLeft" ></fa-icon> Torna a Gestione Ordini</a>
         </div>
     </div>
 
@@ -11,26 +11,6 @@
             <h6>Trova una carta</h6>
         </div>
         <div class="card-body">
-            <!-- <input [(ngModel)]="searchValue" class="form-control" (input)="loadCards()">
-            <div *ngIf="cards.length > 0" class="mt-3">
-                <ul class="list-group scrollable-list">
-                    <li class="list-group-item" *ngFor="let item of cards">
-                        <ng-template #popTemplate>
-                            <div [innerHtml]="returnHtml(item.png ? item.png : item.imageFace1 )"></div>
-                        </ng-template>
-                        <span [tooltip]="popTemplate">
-                            <p>{{item.printedName ? (item.printedName + ' (' + item.name + ')') : item.name}}</p>
-                            <p *ngFor="let setItem of item.editions" class="text-muted mb-1">
-                                <img [src]="setItem.setIcon" alt="Edition" style="width: 20px; height: 20px;">
-                                <span class="ms-2">{{ setItem.setName }}</span>
-                            </p>
-                        </span>
-                        <button class="btn btn-primary" (click)="addItem(item)">Aggiungi all'ordine</button>
-                    </li>
-                </ul>
-            </div> -->
-
-
             <div class="mb-3" style="position: relative;">
                 <label for="prof" class="form-label">Trova una carta Carta *</label>
                 <input type="text" #professione [(ngModel)]="searchValue" (input)="loadCards()" class="form-control "
@@ -85,7 +65,7 @@
                                 item.card?.name}} </td>
                             <td><small *ngFor="let setItem of item.card?.editions">
                                     <div class="d-flex align-items-center">
-                                        <img [src]="setItem.setIcon" alt="Edition" style="width: 40px; height: 40px;">
+                                        <img [src]="setItem.setIcon" alt="Edition" style="width: 20px; height: 20px;">
                                         <span class="ms-2">{{ setItem.setName }}</span>
                                     </div>
                                 </small></td>
@@ -93,7 +73,7 @@
                             <td>{{ item.priceCM | currency: 'EUR' }} ({{ getPriceCM(item) | currency: 'EUR'}})</td>
                             <td>{{ item.quantity}}</td>
                             <td>{{ item.foil ? 'Sì' : 'No'}}</td>
-                            <td><button class="btn btn-danger" (click)="removeItem(i)">Rimuovi</button></td>
+                            <td><button *ngIf="!readOnly" class="btn btn-danger" (click)="removeItem(i)"  tooltip="Elimina"> <fa-icon  [icon]="faTrash" [size]="'1x'"></fa-icon></button></td>
                         </tr>
                     </tbody>
                     <tbody *ngIf="selectedItems && selectedItems.length === 0">
