--- a/src/app/components/modals/confirm-modal/confirm-modal.component.html
+++ b/src/app/components/modals/confirm-modal/confirm-modal.component.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">Aggiunta Carta {{data.printedName ? data.printedName : data.name}} alla tua
+    <h4 class="modal-title pull-left">Aggiunta Carta {{data.card?.printedName ? data.card?.printedName :
+        data.card?.name}} alla tua
         Collezione</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true" class="visually-hidden">&times;</span>
@@ -8,22 +9,33 @@
 <div class="modal-body">
     <form [formGroup]="confirmForm" class="needs-validation">
         <div class="row m-2 mt-3">
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="form-group">
                     <input type="checkbox" formControlName="inVendita" id="remember-me">
                     <label for="remember-me">In Vendita?</label>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="form-group">
                     <input type="checkbox" formControlName="foil" id="isfoil">
                     <label for="isfoil">Carta Foil ?</label>
                 </div>
             </div>
-            <div class="col-sm-4">
+        </div>
+        <div class="row m-2 mt-3">
+            <div class="col-sm-6">
                 <div class="form-group">
                     <input type="checkbox" formControlName="attivo" id="active">
                     <label for="active">Attivo</label>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <select class="form-select" aria-label="Lang" id="lang" formControlName="lang">
+                        <option value="it">Italiano</option>
+                        <option value="en">Inglese</option>
+                    </select>
+                    <label for="active">Lingua</label>
                 </div>
             </div>
         </div>
@@ -31,7 +43,7 @@
 </div>
 <div class="modal-footer text-center">
     <div class="row">
-        <p>Sei sicuro di aggiungere la Carta {{data.printedName ? data.printedName : data.name}}?</p>
+        <p>Sei sicuro di aggiungere la Carta {{data.card?.printedName ? data.card?.printedName : data.card?.name}}?</p>
     </div>
     <div class="row">
         <div class="col-6">
