--- a/src/app/components/modals/confirm-standard/confirm-standard.component.html
+++ b/src/app/components/modals/confirm-standard/confirm-standard.component.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">Rimuovi Ordine</h4>
+    <h4 class="modal-title pull-left">{{data.title}}</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true" class="visually-hidden">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <h5>Sei sicuro di voler rimuovere l'ordine?</h5>
+    <h5>{{data.domanda}}</h5>
 </div>
 <div class="modal-footer text-center">
     <div class="row">
